html generates correctly, and added a missed end quote from the three accessory modules. darn you copy paste. see you tomorrow

--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shipping Ship Ships</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="/styles/main.css" />
+  </head>
+  <body>
+    <main>
+      <section>
+        <h2>Docks</h2>
+        <div class="docks"></div>
+      </section>
+      <section>
+        <h2>Haulers</h2>
+        <div class="haulers"></div>
+      </section>
+      <section>
+        <h2>Ships</h2>
+        <div class="ships"></div>
+      </section>
+    </main>
+    <script src="/scripts/main.js" type="module"></script>
+  </body>
 </html>
