added click event listener to haulers, and also added haulerId property to the ships element in the database

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shipping Ship Ships</title>
     <link rel="stylesheet" href="/styles/main.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   </head>
   <body>
     <main>
@@ -13,11 +15,11 @@
         <div class="docks"></div>
       </section>
       <section>
-        <h2>Haulers</h2>
+        <h2>Hauling Ships</h2>
         <div class="haulers"></div>
       </section>
       <section>
-        <h2>Ships</h2>
+        <h2>Shipping Ships</h2>
         <div class="ships"></div>
       </section>
     </main>
